# semantic-aware-analytics-copilot

./: .gitignore  README.md  embed_metrics.py  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: endpoints.py
app/core/: config.py  services.py
app/models/: semantic.py
app/services/: llm_service.py  rag_service.py  semantic_service.py
frontend/: app.py
notebook/: embeddings.ipynb
poc/: embed_metrics.py
semantic/: all_metrics.yaml
semantic_copilot/: .gitignore  dbt_project.yml
semantic_copilot/models/marts/: mart_listing_pricing.sql  mart_occupancy.sql  mart_review_velocity.sql
semantic_copilot/models/staging/: _sources.yml  stg_calendar.sql  stg_listings.sql  stg_reviews.sql
