[project]
name = "my-rag-data-copilot-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.137.1",
    "jupyter>=1.1.1",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-text-splitters>=1.1.2",
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
    "unstructured>=0.23.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
